--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
     
     <title>Portfólio Pablo Lins</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 </head>
 
@@ -47,9 +43,10 @@
                 <button id="skills">Skills<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li><img src=>HTML</li>
+                        <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
+                        <li>nodeJS</li>
                     </ul>
                 </div>
             </section>
@@ -65,18 +62,19 @@
             <section class="acordeon " id="acordeonEducacao">
                 <button id="educacao">Educação<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
-                    <p>Click no link DIO-ME</p>
-                    <span></span>
-                    <p>Dio me</p>
-                    <span><a href="https://web.dio.me/users/pavlolins?tab=achievements" target="_blank">Web Development! All i need to know in one place</a></span><br><br>
-                    <span>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas </span><br>
+                    <ul>
+                        <li>Plataforma <p style="color: rgb(218, 8, 8); font-size: xx-large;">DIO</p> de aprendizado em programação.</li>
+                        <li><p>Click no link <a style="color: rgb(218, 8, 8); font-size: x-large; text-decoration: none;" href="https://web.dio.me/users/pavlolins?tab=achievements" target="_blank">DIO-me</a></p></li>
+                        <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas </p></li>   
+                    </ul>
+                    <br>
                 </div>
             </section>
             <section class="acordeon " id="acordeonPortfolio">
                 <button id="portfolio">Portfolio<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li>Sm portfólio no momento</li>
+                        <li>Sem portfólio no momento</li>
                     </ul>
                 </div>
             </section>
@@ -95,8 +93,6 @@
 
   
     <script src="./assets/js/index.js"   defer></script>
-    <script src="./assets/js/api.js" ></script>
-    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
