--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="content">
                     <ul>
                         <li>Plataforma <p style="color: rgb(218, 8, 8); font-size: xx-large;">DIO</p> de aprendizado em programação.</li>
-                        <li><p>Click no link <a style="color: rgb(218, 8, 8); font-size: x-large; text-decoration: none;" href="https://web.dio.me/users/pavlolins?tab=achievements" target="_blank">DIO-me</a></p></li>
+                        <li><p>Click no link <a style="color: rgb(218, 8, 8); font-size: x-large; text-decoration: none;" href="https://www.dio.me/users/pavlolins" target="_blank">DIO-me</a></p></li>
                         <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas </p></li>   
                     </ul>
                     <br>
