--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <button id="idiomas">Idiomas<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li><img src=>Português(Nativo)</li>
+                        <li><img src=>Português(Nativo)</li> 
                         <li><img src=>Inglês(Intermediário)</li>
                     </ul>
                 </div>
@@ -63,9 +63,11 @@
                 <button id="educacao">Educação<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li>Plataforma <p style="color: rgb(218, 8, 8); font-size: xx-large;">DIO</p> de aprendizado em programação.</li>
-                        <li><p>Click no link <a style="color: rgb(218, 8, 8); font-size: x-large; text-decoration: none;" href="https://www.dio.me/users/pavlolins" target="_blank">DIO-me</a></p></li>
-                        <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas </p></li>   
+                        <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas(cursando) </p></li> 
+                        <li><span>Plataforma</span> <span> <img src="./img/DIOlogo.png" alt=""> </span>  </span><span>de aprendizado em programação.</span> </li>
+                        <li><p>Click no link <a style="color:green; text-decoration: none;" href="https://www.dio.me/users/pavlolins" target="_blank">DIO-me</a></p></li>
+                        <li><a href="dio.html">Certificados DIO</a></li>
+                        <li><p>Cusrso de JavaScript pela OneBitcode →→<a href="javascriptOneBitCode.html" target="_blank" style="color:green; text-decoration: none;">Certificado</a></p></li>  
                     </ul>
                     <br>
                 </div>
@@ -74,7 +76,11 @@
                 <button id="portfolio">Portfolio<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li>Sem portfólio no momento</li>
+                        <li class="mundo-invertido">Landing page mundo invertido <br>
+                             ↓ <a href="https://mundo-invertido-pablo.netlify.app/" target="_blank">Vá para o site</a> 
+                             
+                             ↓ <a href="https://github.com/CBPablo/landing-page-DIO-Mundo-invertido/tree/main" target="_blank">ver projeto no Github </a>
+                        </li>
                     </ul>
                 </div>
             </section>
