--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <button id="portfolio">Portfolio<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul>
-                        <li class="mundo-invertido">Landing page mundo invertido <br>
+                        <li class="mundo-invertido">Landing page mundo invertido (Não responsivo) <br>
                              ↓ <a href="https://mundo-invertido-pablo.netlify.app/" target="_blank">Vá para o site</a> 
                              
                              ↓ <a href="https://github.com/CBPablo/landing-page-DIO-Mundo-invertido/tree/main" target="_blank">ver projeto no Github </a>
