chuck-norris commit

--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="projects.css">
 </head>
 <body>
     <div>
         <ol>
             <li>
                 <a href="https://mundo-invertido-pablo.netlify.app/" target="_blank">Landing page mundo invertido (Não responsivo) </a>
+                <br>
+                
+            </li>
+            <li>
+                <a href="https://chuknorrisjoke.netlify.app/">Piadas do Chuck Norris(Consumo de API e SEO)</a>
             </li>
         </ol>
     </div>
