--- a/index.html
+++ b/index.html
@@ -42,28 +42,26 @@
             <section class="acordeon" id="acordeonSkills">
                 <button id="skills">Skills<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>nodeJS</li>
+                    <ul class="mundo-invertido">
+                        <li><p>| HTML| CSS | JavaScript | NodeJs |</p></li>
+                       
                     </ul>
                 </div>
             </section>
             <section class="acordeon" id="acordeonIdiomas">
                 <button id="idiomas">Idiomas<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
-                    <ul>
-                        <li><img src=>Português(Nativo)</li> 
-                        <li><img src=>Inglês(Intermediário)</li>
-                    </ul>
+                    <ul class="mundo-invertido">
+                        <li><p>Português (Nativo)</p></li> 
+                        <li><p>Inglês (Intermediário)</p></li>
+                    </ul> 
                 </div>
             </section>
             <section class="acordeon " id="acordeonEducacao">
                 <button id="educacao">Educação<img src="./assets/IMG/arrowdown.svg" alt=""></button>
                 <div class="content">
                     <ul class="mundo-invertido">
-                        <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas(cursando) </p></li> 
+                        <li><p>UNINASSAU - Tecnologo em Analise e desenvolvimento de sistemas (cursando) </p></li> 
                         <li><span>Plataforma</span> <span> <img src="./img/logo.svg" alt=""> </span>  </span><span>de aprendizado em programação.</span> </li>
                         <li><p><a class="mundo-invertido" href="https://www.dio.me/users/pavlolins" target="_blank">Ir para meu perfil público na DIO</a></p></li>
                         <li><a href="certificados.html" target="_blank">Ir para Certificados</a></li>
@@ -101,4 +99,4 @@
     <script src="./assets/js/index.js"   defer></script>
 </body>
 
-</html>
+</html>''
