--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div id="portfolio" class="container text-start">
         <div class="row">
           <div class="col">
-            <h2 id="sobre-mim">Portfólio</h2>
+            <h2 class="sobre-mim">Portfólio</h2>
             <br />
             <h2>Siga para lista de sites feitos por mim </h2>
             <a href="./projects.html" target="_blank">clicando aqui</a>
