--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2>Desenvolvedor de Softwere</h2>
             <p>pavlolins@gmail.com</p>
             <span>
-              <a href="www.linkedin.com/in/marcus-lins-83216a313">
+              <a href="https://www.linkedin.com/in/marcus-lins-83216a313/">
                 <img src="./img/linkedin-150x150-1.png" alt="logo do linkedin"
               /></a>
               <a href="https://github.com/CBPablo">
