--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <h2>Desenvolvedor de Softwere</h2>
             <p>pavlolins@gmail.com</p>
             <span>
-              <a href="https://www.linkedin.com/in/marcus-lins-83216a313/">
+              <a href="https://www.linkedin.com/in/marcus-lins-83216a313/" target="_blank">
                 <img src="./img/linkedin-150x150-1.png" alt="logo do linkedin"
               /></a>
-              <a href="https://github.com/CBPablo">
+              <a href="https://github.com/CBPablo" target="_blank">
                 <img src="./img/github-150x150-1.png" alt="logo do github"
               /></a>
             </span>
@@ -142,7 +142,7 @@
             <br />
             <p>
               Acesse meu perfil público na DIO(Digital Inovation One)
-              <a href="https://www.dio.me/users/pavlolins">
+              <a href="https://www.dio.me/users/pavlolins" target="_blank">
                  clicando aqui.</a
               >
             </p>
