--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div>
         <ol>
             <li>
-                <a href="https://mundo-invertido-pablo.netlify.app/" target="_blank">Landing page mundo invertido (Não responsivo) </a>
+                <a href="https://mundo-invertido-marcus.netlify.app/" target="_blank">Landing page mundo invertido (Não responsivo) </a>
                 <br>
                 
             </li>
